<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="PILS_DEVICES" Id="{c13d0ec1-dadc-4beb-a3f1-3a752770c4f8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PILS_DEVICES
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Interface between PILS and AXIS
//Example code of how to link the axis and PILS
fbMotorM1(stAxisStruct:= astAxes[1], stDeviceStructPILS:= stMotorM1, stAxisPar:= stMotorM1Param);
fbMotorM2(stAxisStruct:= astAxes[2], stDeviceStructPILS:= stMotorM2, stAxisPar:= stMotorM2Param);
stPowerSwitchesAxis1.nValue:= BOOL_TO_INT(Axis_Template.bPowerSwitchesAxis1);
stPowerSwitchesAxis2.nValue:= BOOL_TO_INT(Axis_Template.bPowerSwitchesAxis2);
//stPowerSwitchesAxis1Ctr.nCurrentValue:= BOOL_TO_INT(Axis_Template.bPowerSwitchesAxis1);
//stPowerSwitchesAxis1Ctr.nTargetValue:= BOOL_TO_INT(Axis_Template.bPowerSwitchesAxis1);

//stMotor1Temp.fValue := Axis_1.fMotTemp1;
//stMotorM1EncoderRaw.nValue := nEncoderValueAxis1;]]></ST>
    </Implementation>
    <LineIds Name="PILS_DEVICES">
      <LineId Id="20" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="37" Count="1" />
      <LineId Id="47" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="30" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>